Update module dependencies
Remove unused packages
Update golang.org/x/net to v0.20.0
Update golang.org/x/sys to v0.0.0-20220811171246-fbc7d0a398ab
Update gopkg.in/yaml.v2 to v2.4.0
