# api/photo/photoRouter.go
@@ -6,8 +6,10 @@ func Register(root *echo.Group, photoController PhotoController) {
 	photoRouter := root.Group("/photo")
 
 	photoRouter.POST("/upload", photoController.UploadPhoto)
+	photoRouter.POST("/upload-live", photoController.UploadLivePhoto)
 	photoRouter.GET("", photoController.GetPhotoList)
 	photoRouter.GET("/group", photoController.GetPhotosGroup)
 	photoRouter.GET("/range", photoController.GetPhotoRange)
 	photoRouter.GET("/first", photoController.GetFirstPhoto)
+
 }
