# docs/swagger.json
@@ -82,6 +82,31 @@
                 ],
                 "responses": {}
             }
+        },
+        "/photo/upload-live": {
+            "post": {
+                "description": "upload live photo",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "photo",
+                        "name": "photo",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "live",
+                        "name": "live",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
         }
     }
 }
